test/classes/errors/nilability-assign/assign-oknil-unmanaged-from-nonnil-unmanaged.chpl
//  lhs: unmanaged?  rhs: unmanaged!  ok

class MyClass {  var x: int;  }

var lhs: unmanaged MyClass?;
var rhs = new unmanaged MyClass();

lhs = rhs;

delete rhs;

